--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,8 @@ app.*.map.json
 /android/app/release
 
 # macOS
-**/Flutter/ephemeral/
-**/Pods/
-**/macos/Flutter/GeneratedPluginRegistrant.swift
-**/macos/Flutter/ephemeral
-**/xcuserdata/
+/Flutter/ephemeral/
+/Pods/
+/macos/Flutter/GeneratedPluginRegistrant.swift
+/macos/Flutter/ephemeral
+/xcuserdata/
